[package]
name = "moss_hecs_hierarchy"
version = "0.12.1"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"

readme = "README.md"
documentation = "https://docs.rs/hecs-hierarchy"
repository = "https://github.com/ten3roberts/hecs-hierarchy"
description = "Hierachy implementation for Hecs ECS"
license-file = "LICENSE"

keywords = ["gamedev", "ecs", "hierarchy", "hecs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moss_hecs = { git = "https://github.com/keenawa-co/moss_hecs.git", branch = "master" }
moss_hecs_schedule = { git = "https://github.com/keenawa-co/moss_hecs_schedule.git", branch = "main", default-features = false }
once_cell = "1.19.0"
smallvec = "1.11.2"
